macos/openim_sdk_ffi_apple.h

typedef struct {
    void (*onMethodChannel)(Dart_Port_DL port, char*, char*, char*, double*, char*);
	void (*onNativeMethodChannel)(char*, char*, char*, double*, char*);
} CGO_OpenIM_Listener;
static void callOnMethodChannel(CGO_OpenIM_Listener *listener, Dart_Port_DL port, char* methodName, char* operationID, char* callMethodName, double* errCode, char* message) {
	if (listener->onMethodChannel != NULL) {
		listener->onMethodChannel(port, methodName, operationID, callMethodName, errCode, message);
	}
}
static void callOnNativeMethodChannel(CGO_OpenIM_Listener *listener, char* methodName, char* operationID, char* callMethodName, double* errCode, char* message) {
	if (listener->onNativeMethodChannel != NULL) {
		listener->onNativeMethodChannel(methodName, operationID, callMethodName, errCode, message);
	}
}
extern void GetAllConversationList(char* operationID);
extern void GetConversationListSplit(char* operationID, int offset, int count);
extern void GetOneConversation(char* operationID, int32_t sessionType, char* sourceID);
extern void GetMultipleConversation(char* operationID, char* conversationIDList);
extern void SetGlobalRecvMessageOpt(char* operationID, int opt);
extern void SetConversationMsgDestructTime(char* operationID, char* conversationID, int64_t msgDestructTime);
extern void SetConversationIsMsgDestruct(char* operationID, char* conversationID, _Bool isMsgDestruct);
extern void HideConversation(char* operationID, char* conversationID);
extern void GetConversationRecvMessageOpt(char* operationID, char* conversationIDList);
extern void DeleteAllConversationFromLocal(char* operationID);
extern void SetConversationDraft(char* operationID, char* conversationID, char* draftText);
extern void ResetConversationGroupAtType(char* operationID, char* conversationID);
extern void PinConversation(char* operationID, char* conversationID, _Bool isPinned);
extern void SetConversationPrivateChat(char* operationID, char* conversationID, _Bool isPrivate);
extern void SetConversationBurnDuration(char* operationID, char* conversationID, int32_t duration);