lib/openim_sdk_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_openim_sdk_ffi.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config open_im.yaml`.
///
class OpenimSdkFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OpenimSdkFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OpenimSdkFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void callOnMethodChannel(
    ffi.Pointer<CGO_OpenIM_Listener> listener,
    int port,
    ffi.Pointer<ffi.Char> methodName,
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> callMethodName,
    ffi.Pointer<ffi.Double> errCode,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _callOnMethodChannel(
      listener,
      port,
      methodName,
      operationID,
      callMethodName,
      errCode,
      message,
    );
  }

  late final _callOnMethodChannelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<CGO_OpenIM_Listener>,
              Dart_Port_DL,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('callOnMethodChannel');
  late final _callOnMethodChannel = _callOnMethodChannelPtr.asFunction<
      void Function(
          ffi.Pointer<CGO_OpenIM_Listener>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  void callOnNativeMethodChannel(
    ffi.Pointer<CGO_OpenIM_Listener> listener,
    ffi.Pointer<ffi.Char> methodName,
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> callMethodName,
    ffi.Pointer<ffi.Double> errCode,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _callOnNativeMethodChannel(
      listener,
      methodName,
      operationID,
      callMethodName,
      errCode,
      message,
    );
  }

  late final _callOnNativeMethodChannelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<CGO_OpenIM_Listener>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('callOnNativeMethodChannel');
  late final _callOnNativeMethodChannel =
      _callOnNativeMethodChannelPtr.asFunction<
          void Function(
              ffi.Pointer<CGO_OpenIM_Listener>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>();

  void GetAllConversationList(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetAllConversationList(
      operationID,
    );
  }

  late final _GetAllConversationListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetAllConversationList');
  late final _GetAllConversationList = _GetAllConversationListPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  void GetConversationListSplit(
    ffi.Pointer<ffi.Char> operationID,
    int offset,
    int count,
  ) {
    return _GetConversationListSplit(
      operationID,
      offset,
      count,
    );
  }

  late final _GetConversationListSplitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int,
              ffi.Int)>>('GetConversationListSplit');
  late final _GetConversationListSplit = _GetConversationListSplitPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>, int, int)>();

  void GetOneConversation(
    ffi.Pointer<ffi.Char> operationID,
    int sessionType,
    ffi.Pointer<ffi.Char> sourceID,
  ) {
    return _GetOneConversation(
      operationID,
      sessionType,
      sourceID,
    );
  }

  late final _GetOneConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32,
              ffi.Pointer<ffi.Char>)>>('GetOneConversation');
  late final _GetOneConversation = _GetOneConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Char>)>();

  void GetMultipleConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationIDList,
  ) {
    return _GetMultipleConversation(
      operationID,
      conversationIDList,
    );
  }

  late final _GetMultipleConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetMultipleConversation');
  late final _GetMultipleConversation = _GetMultipleConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetGlobalRecvMessageOpt(
    ffi.Pointer<ffi.Char> operationID,
    int opt,
  ) {
    return _SetGlobalRecvMessageOpt(
      operationID,
      opt,
    );
  }

  late final _SetGlobalRecvMessageOptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('SetGlobalRecvMessageOpt');
  late final _SetGlobalRecvMessageOpt = _SetGlobalRecvMessageOptPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, int)>();

  void SetConversationMsgDestructTime(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    int msgDestructTime,
  ) {
    return _SetConversationMsgDestructTime(
      operationID,
      conversationID,
      msgDestructTime,
    );
  }

  late final _SetConversationMsgDestructTimePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int64)>>('SetConversationMsgDestructTime');
  late final _SetConversationMsgDestructTime =
      _SetConversationMsgDestructTimePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void SetConversationIsMsgDestruct(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    bool isMsgDestruct,
  ) {
    return _SetConversationIsMsgDestruct(
      operationID,
      conversationID,
      isMsgDestruct,
    );
  }

  late final _SetConversationIsMsgDestructPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('SetConversationIsMsgDestruct');
  late final _SetConversationIsMsgDestruct =
      _SetConversationIsMsgDestructPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void HideConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _HideConversation(
      operationID,
      conversationID,
    );
  }

  late final _HideConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('HideConversation');
  late final _HideConversation = _HideConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetConversationRecvMessageOpt(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationIDList,
  ) {
    return _GetConversationRecvMessageOpt(
      operationID,
      conversationIDList,
    );
  }

  late final _GetConversationRecvMessageOptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetConversationRecvMessageOpt');
  late final _GetConversationRecvMessageOpt =
      _GetConversationRecvMessageOptPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteAllConversationFromLocal(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _DeleteAllConversationFromLocal(
      operationID,
    );
  }

  late final _DeleteAllConversationFromLocalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'DeleteAllConversationFromLocal');
  late final _DeleteAllConversationFromLocal =
      _DeleteAllConversationFromLocalPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>)>();

  void SetConversationDraft(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> draftText,
  ) {
    return _SetConversationDraft(
      operationID,
      conversationID,
      draftText,
    );
  }

  late final _SetConversationDraftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SetConversationDraft');
  late final _SetConversationDraft = _SetConversationDraftPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void ResetConversationGroupAtType(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _ResetConversationGroupAtType(
      operationID,
      conversationID,
    );
  }

  late final _ResetConversationGroupAtTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('ResetConversationGroupAtType');
  late final _ResetConversationGroupAtType =
      _ResetConversationGroupAtTypePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void PinConversation(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    bool isPinned,
  ) {
    return _PinConversation(
      operationID,
      conversationID,
      isPinned,
    );
  }

  late final _PinConversationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('PinConversation');
  late final _PinConversation = _PinConversationPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void SetConversationPrivateChat(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    bool isPrivate,
  ) {
    return _SetConversationPrivateChat(
      operationID,
      conversationID,
      isPrivate,
    );
  }

  late final _SetConversationPrivateChatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('SetConversationPrivateChat');
  late final _SetConversationPrivateChat =
      _SetConversationPrivateChatPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void SetConversationBurnDuration(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    int duration,
  ) {
    return _SetConversationBurnDuration(
      operationID,
      conversationID,
      duration,
    );
  }

  late final _SetConversationBurnDurationPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32)>>('SetConversationBurnDuration');
  late final _SetConversationBurnDuration =
      _SetConversationBurnDurationPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();
